--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -17,6 +17,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+      with:
+        submodules: true
 
     - name: Validate composer.json and composer.lock
       run: composer validate --strict
