--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -35,6 +35,9 @@ jobs:
     - name: Install dependencies
       run: composer install --prefer-dist --no-progress
 
+    - name: Build YAML test suite data
+      run: make -C tests/yaml-test-suite data
+
     - name: Run test suite
       run: php ./vendor/bin/phpunit
 
